base/simpleapp/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapp
spec: 
  selector:
    app: ro-simpleapp
  ports:
    - port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: simpleapp-canary
spec: 
  selector:
    app: ro-simpleapp
  ports:
    - port: 80
      targetPort: http
