base/simpleapp/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ro-vs-simpleapp
spec:
  gateways:
    - gateway
  hosts:
    - '*'
  http:
    - name: primary
      route:
        - destination:
            host: simpleapp.dev.svc.cluster.local
            port:
              number: 80
          weight: 100
        - destination:
            host: simpleapp-canary.dev.svc.cluster.local
            port:
              number: 80
          weight: 0
